--- a/.github/workflows/multi-language.yml
+++ b/.github/workflows/multi-language.yml
@@ -17,7 +17,8 @@ jobs:
       - run: pip install -r requirements.txt
       - run: pytest -v
 
-  javascript-tests:
+   javascript-tests:
+    needs: python-tests      
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
@@ -26,3 +27,4 @@ jobs:
           node-version: '20'
       - run: npm install
       - run: npm test
+
